adding the pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,10 @@
   href: /publications/
 - text: Research
   href: /research/
+- text: Projects
+  href: /projects/
 - text: Team
   href: /team/
+
 
 
