combine research and project pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,10 +4,8 @@
   href: /
 - text: publications
   href: /publications/
-- text: Research
-  href: /research/
-- text: Projects
-  href: /projects/
+- text: Research Projects
+  href: /researchprojects/
 - text: Team
   href: /team/
 
