--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE SETTINGS
-title: DONUTS Colab                      # Title in top navigation bar (navbar) and <head>
+# title: DONUTS Colab                      # Title in top navigation bar (navbar) and <head>
 author: DONUTS Colab                   # Used for copyright statement in footer
 baseurl: "/"                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
@@ -25,7 +25,7 @@ colors:
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 font_serif: true                        # Font type for page content: serif (default) or slightly smaller sans-serif
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
-logo: /assets/theme/images/logo.jpg # Logo in navbar, will be displayed with 30px height
+logo: /assets/theme/images/logo.png # Logo in navbar, will be displayed with 30px height
 
 # BUILD SETTINGS
 markdown: kramdown
