--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE SETTINGS
-# title: DONUTS Colab                      # Title in top navigation bar (navbar) and <head>
+title:                       # Title in top navigation bar (navbar) and <head>
 author: DONUTS Colab                   # Used for copyright statement in footer
 baseurl: "/"                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
