--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ social:
 
 # THEME SETTINGS (ALL OPTIONAL)
 posts_on_home: 4                        # Show x number of latest posts on homepage, can be 0
-tweets_on_home: false                    # Show Twitter feed of social.twitter on homepage
+tweets_on_home: true                    # Show Twitter feed of social.twitter on homepage
 archive_permalink: /blog/               # Permalink of page using the archive.html layout, required when using post tags
 github_edit: true                       # Show an "edit this page" link in the footer, can also be name of branch (default: main)
 colors:
