--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,15 @@
 
 - text: Home # Note that users can also reach the homepage by clicking the site's title on the left in the navbar
   href: /
+- text: News
+  href: /news/
 - text: publications
   href: /publications/
 - text: Research Projects
   href: /researchprojects/
 - text: Team
   href: /team/
+
 
 
 
