--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,10 +8,10 @@
   # orcid: 0000-0000-0000-0000
   # researchgate: researchgate_username
   googlescholar: sV43f5AAAAAJ
-  twitter: twitter_username
-  mastodon: https://mastodon.social/@mastodon_username
-  github: github_username
-  email: name@example.com
+  twitter: Afsaneh_Razi
+  # mastodon: https://mastodon.social/@mastodon_username
+  # github: github_username
+  email: afsaneh.razi@drexel.edu
 
 - name: Dr. Shadi Rezapour
   # role: Director
@@ -20,10 +20,10 @@
     Assistant professor at Drexel University
   
   googlescholar: b6UNLaAAAAAJ
-  twitter: twitter_username
-  mastodon: https://mastodon.social/@mastodon_username
-  github: github_username
-  email: name@example.com
+  twitter: shadi_rezapour
+  # mastodon: https://mastodon.social/@mastodon_username
+  # github: github_username
+  email: shadi.rezapour@drexel.edu
 
 
 - name: Dr. John Seberger
@@ -32,7 +32,7 @@
   description: >
     Assistant professor at Drexel University
   googlescholar: 6AkP0EcAAAAJ
-  twitter: twitter_username
-  mastodon: https://mastodon.social/@mastodon_username
-  github: github_username
-  email: name@example.com
+  twitter: jsseberger
+  # mastodon: https://mastodon.social/@mastodon_username
+  # github: github_username
+  email: john.s.seberger@drexel.edu
