trying to see if linkedin works

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -24,6 +24,7 @@
   # mastodon: https://mastodon.social/@mastodon_username
   # github: github_username
   email: shadi.rezapour@drexel.edu
+  linkedin: https://www.linkedin.com/in/shadi-rezapour/
 
 
 - name: Dr. John Seberger
