fixed Sanondas linkedin

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -59,4 +59,4 @@
   # mastodon: https://mastodon.social/@mastodon_username
   # github: github_username
   email: sanonda.gupta@maine.edu
-  linkedin: sanonda-gupta-8415bba1
+  # linkedin: sanonda-gupta-8415bba1
