fixed atiehs photo

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -63,7 +63,7 @@
 
   name: Atieh Armin
   # role: Director
-  image: assets\theme\images\atieh.png
+  image: assets\theme\images\Atieh.png
   description: >
     Ph.D. student at Drexel University
   googlescholar: vuubQDkAAAAJ
