--- a/_data/team.yml
+++ b/_data/team.yml
@@ -61,7 +61,7 @@
   email: sanonda.gupta@maine.edu
   # linkedin: sanonda-gupta-8415bba1
 
-  name: Atieh Armin
+- name: Atieh Armin
   # role: Director
   image: assets\theme\images\Atieh.png
   description: >
