added matts wonderful and amazing youtube channel

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -92,6 +92,7 @@
     Ph.D. student at Drexel University
   googlescholar: v8YoE3kAAAAJ
   twitter: HalflingWizard_
+  youtube: HalflingWizard
   # mastodon: https://mastodon.social/@mastodon_username
   github: HalflingWizard
   email: matt.namvarpour@drexel.edu
