--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,7 +4,9 @@
   # role: Director # Will appear next to name
   image: assets/theme/images/afsaneh-razi-web.jpeg # Can be external link
   description: > # Can be Markdown
-    Assistant professor at Drexel University
+    Assistant professor
+    Drexel University
+    Research Interests: HCI, Social Computing, AI/ML, Privacy, and Online Safety
   # orcid: 0000-0000-0000-0000
   # researchgate: researchgate_username
   googlescholar: sV43f5AAAAAJ
@@ -18,7 +20,9 @@
   # role: Director
   image: assets/theme/images/Shadi-Rezapour.jpg
   description: >
-    Assistant professor at Drexel University
+    Assistant professor
+    Drexel University
+    Research Interests: Computational Social Science and Natural Language Processing (NLP)
   
   googlescholar: b6UNLaAAAAAJ
   twitter: shadi_rezapour
@@ -32,7 +36,9 @@
   # role: Director
   image: assets/theme/images/John-Seberger.jpg
   description: >
-    Assistant professor at Drexel University
+    Assistant professor
+    Drexel University
+    Research Interests: HCI, Informatics, Privacy
   googlescholar: 6AkP0EcAAAAJ
   twitter: jsseberger
   # mastodon: https://mastodon.social/@mastodon_username
