--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,9 +4,9 @@
   # role: Director # Will appear next to name
   image: assets/theme/images/afsaneh-razi-web.jpeg # Can be external link
   description: > # Can be Markdown
-    Assistant professor  
-    Drexel University  
-    Research Interests: HCI, Social Computing, AI/ML, Privacy, and Online Safety  
+    Assistant professor<br>
+    Drexel University<br>
+    Research Interests: HCI, Social Computing, AI/ML, Privacy, and Online Safety<br>
 
   # orcid: 0000-0000-0000-0000
   # researchgate: researchgate_username
@@ -24,7 +24,7 @@
     Assistant professor  
     Drexel University  
     Research Interests: Computational Social Science and Natural Language Processing (NLP)  
-      
+
   googlescholar: b6UNLaAAAAAJ
   twitter: shadi_rezapour
   # mastodon: https://mastodon.social/@mastodon_username
