added people's webpages

--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -13,6 +13,7 @@
   github: labouz
   email: layla.bzb@gmail.com
   linkedin: layla-bouzoubaa
+  website: https://www.laylab.me/
 
 - name: Sanonda Datta Gupta
   # role: Director
@@ -27,6 +28,7 @@
   # github: github_username
   email: sanonda.gupta@maine.edu
   # linkedin: sanonda-gupta-8415bba1
+  website: https://sites.google.com/view/sanondagupta147/sanonda-datta-gupta
 
 - name: Elham Aghakhani
   # role: Director
@@ -84,3 +86,4 @@
   github: HalflingWizard
   email: matt.namvarpour@drexel.edu
   linkedin: matt-namvarpour
+  website: https://halflingwizard.github.io/
