--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -21,7 +21,7 @@
   description: >
     Ph.D. Student<br>
     Drexel University<br>
-    Research Interests: Trust, Ethics, and Privacy in HCI, Social Computing, Conceptual Modelling, and Ontological Modeling<br>
+    Research Interests: Trust, Ethics, and Privacy in HCI, and Ontological Modeling<br>
   googlescholar: J4CgkboAAAAJ
   # twitter: jsseberger
   # mastodon: https://mastodon.social/@mastodon_username
@@ -79,11 +79,11 @@
     Ph.D. Student<br>
     Drexel University<br>
     Research Interests: Artificial Intelligence, Machine Learning, Human-AI Interaction<br>
+  email: matt.namvarpour@drexel.edu
   googlescholar: v8YoE3kAAAAJ
   twitter: HalflingWizard_
   youtube: HalflingWizard
   # mastodon: https://mastodon.social/@mastodon_username
   github: HalflingWizard
-  email: matt.namvarpour@drexel.edu
   linkedin: matt-namvarpour
   website: https://halflingwizard.github.io/
