--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -26,7 +26,7 @@
   # twitter: jsseberger
   # mastodon: https://mastodon.social/@mastodon_username
   # github: github_username
-  email: sanonda.gupta@maine.edu
+  email: sanonda.datta.gupta@drexel.edu
   # linkedin: sanonda-gupta-8415bba1
   website: https://sites.google.com/view/sanondagupta147/sanonda-datta-gupta
 
@@ -69,7 +69,7 @@
   # twitter: jsseberger
   # mastodon: https://mastodon.social/@mastodon_username
   #github: atiarmn
-  #email: atieh.armin@drexel.edu
+  email: aria.pessianzade@drexel.edu
   linkedin: aria-pessianzadeh-803a8b1a8
 
 - name: Matt Namvarpour
