--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -50,7 +50,7 @@
   description: >
     Ph.D. Student<br>
     Drexel University<br>
-    Research Interests: Human-AI Interaction, Artificial Intelligence, Social Media, Machine Learning, Computing Social Science<br>
+    Research Interests: Artificial Intelligence, Social Media, Machine Learning, Computing Social Science<br>
   googlescholar: vuubQDkAAAAJ
   # twitter: jsseberger
   # mastodon: https://mastodon.social/@mastodon_username
