--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -8,11 +8,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
-      - uses: actions/setup-python@v2
-      - with:
+        uses: actions/setup-python@v2
+        with:
           python-version: "3.x"
 
-      - name: install dependancy
+      - name: install dependancies
         run: |
           pip install gspread pyyaml
       - name: Echoing something
