--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -14,6 +14,6 @@ jobs:
 
       - name: install dependancies
         run: | 
-          pip install gspread pyyaml
+          pip install gspread pyyaml pandas
       - name: Echoing something
         run: echo "🎉 The job was automatically triggered"
