--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          git config --global user.name 'donuts-test'
+          git config --global user.email 'elhamcolabpro@gmail.com'
           git add .
           git commit -m 'Update data from Google Sheet'
           git push
