--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -18,4 +18,12 @@ jobs:
       - name: Run python file
         run: python update_data.py
 
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'donuts-test'
+          git config --global user.email 'elhamcolabpro@gmail.com'
+          git add .
+          git commit -m 'Update data from Google Sheet' --allow-empty
+          git push origin head
+
 
