--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -24,6 +24,7 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update data"
-          git push
+          git push origin head
+          
 
 
