--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -17,14 +17,15 @@ jobs:
           pip install pyyaml pandas
       - name: Run python file
         run: python update_data.py
-
+      - with:
+          branch: main
       - name: Commit and push changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update data"
-          git push origin head
+          git push
           
 
 
