--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -23,7 +23,7 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update data"
-          git push origin
+          git push origin main
           
 
 
