--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -6,11 +6,11 @@ jobs:
   report:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
-          python-version: "3.x"
+          python-version: 3.8
 
       - name: install dependancies
         run: | 
@@ -23,7 +23,7 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update data"
-          git push origin main
+          git push
           
 
 
