--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -66,7 +66,7 @@
   # role: Director
   image: assets/theme/images/matt.png
   description: >
-    Research Interests: Artificial Intelligence, Machine Learning, Human-AI Interaction<br>
+    Research Interests: Artificial Intelligence (AI), Machine Learning, Human-AI Interaction<br>
   email: matt.namvarpour@drexel.edu
   googlescholar: v8YoE3kAAAAJ
   twitter: HalflingWizard_
