--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,7 +1,7 @@
 name: test data up
 on:
   schedule: 
-    - cron: "*/6 * * * *"
+    - cron: "13 * * * *"
 jobs:
   report:
     runs-on: ubuntu-latest
