--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -4,7 +4,7 @@
   # role: Research Assistant
   image: assets/theme/images/layla_bouzoubaa.jpg
   description: >
-    Research Interests: Harm Reduction, Natural Language Processing (NLP), Social Media Research<br>
+    Research Interests: Harm Reduction, Natural Language Processing (NLP), Social Computing<br>
   googlescholar: MnpEwBkAAAAJ
   twitter: bouzoulay
   # mastodon: https://mastodon.social/@mastodon_username
