--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Run python file
         run: |
           python update_data.py
+          python update_publications.py
       - name: Commit and push changes
         run: |
           git config user.name github-actions
