--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -18,8 +18,8 @@ jobs:
           pip install pyyaml pandas
       - name: Run python file
         run: |
-          python update_data.py
-          python update_publications.py
+          python /scripts/update_data.py
+          python /scripts/update_publications.py
       - name: Commit and push changes
         run: |
           git config user.name github-actions
