--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python scripts/update_data.py
           python scripts/update_publications.py
+          python scripts/update_team.py
       - name: Commit and push changes
         run: |
           git config user.name github-actions
