--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -18,7 +18,7 @@ jobs:
           pip install pyyaml pandas numpy
       - name: Run python file
         run: |
-          python update_data.py
+          python update_news.py
           python update_publications.py
           python update_team.py
       - name: Commit and push changes
