--- a/_data/phdstudents.yml
+++ b/_data/phdstudents.yml
@@ -1,5 +1,6 @@
-- description: ">\n    Research Interests: Harm Reduction, Natural Language Processing\
-    \ (NLP), Social Computing<br>"
+- description: >
+    Research Interests: Harm Reduction, Natural Language Processing\
+    \ (NLP), Social Computing<br>
   email: layla.bzb@gmail.com
   github: labouz
   googlescholar: MnpEwBkAAAAJ
@@ -8,28 +9,32 @@
   name: Layla Bouzoubaa
   twitter: bouzoulay
   website: https://www.laylab.me/
-- description: ">\n    Research Interests: Trust, Ethics, and Privacy in HCI, and\
-    \ Ontological Modeling<br>"
+- description: >
+    Research Interests: Trust, Ethics, and Privacy in HCI, and\
+    \ Ontological Modeling<br>
   email: sanonda.datta.gupta@drexel.edu
   googlescholar: J4CgkboAAAAJ
   image: assets/theme/images/sanonda.jpg
   name: Sanonda Datta Gupta
   website: https://sites.google.com/view/sanondagupta147/sanonda-datta-gupta
-- description: ">\n    Research Interests: Artificial Intelligence, Machine Learning,\
-    \ Natural Language Processing (NLP)<br>"
+- description: >
+    Research Interests: Artificial Intelligence, Machine Learning,\
+    \ Natural Language Processing (NLP)<br>
   email: elham.aghakhani@drexel.edu
   github: elhamaghakhani
   image: assets/theme/images/elham.jpg
   linkedin: elham-aghakhani
   name: Elham Aghakhani
-- description: ">\n    Research Interests: Politics, Boring stuff.<br>"
+- description: >
+    Research Interests: Politics, Boring stuff.<br>
   email: aria.pessianzade@drexel.edu
   googlescholar: 9XOCsOUAAAAJ
   image: assets/theme/images/aria.jpg
   linkedin: aria-pessianzadeh-803a8b1a8
   name: Aria Pessianzade
-- description: ">\n    Research Interests: Artificial Intelligence (AI), Machine Learning,\
-    \ Human-AI Interaction<br>"
+- description: >
+    Research Interests: Artificial Intelligence (AI), Machine Learning,\
+    \ Human-AI Interaction<br>
   email: matt.namvarpour@drexel.edu
   github: HalflingWizard
   googlescholar: v8YoE3kAAAAJ
