--- a/_data/directors.yml
+++ b/_data/directors.yml
@@ -1,7 +1,6 @@
-- description: > # Can be Markdown
-    Assistant Professor<br>
-    Research Interests:\
-    \ HCI, Social Computing, AI/ML, Privacy, and Online Safety<br>
+- description: 'Assistant Professor
+
+    Research Interests: HCI, Social Computing, AI/ML, Privacy, and Online Safety'
   email: afsaneh.razi@drexel.edu
   googlescholar: sV43f5AAAAAJ
   image: assets/theme/images/afsaneh.jpg
@@ -9,10 +8,10 @@
   name: Dr. Afsaneh Razi
   twitter: Afsaneh_Razi
   website: https://www.afsanehrazi.com/
-- description: >
-    Assistant Professor<br>
-    Research Interests: Computational\
-    \ Social Science and Natural Language Processing (NLP)<br>
+- description: 'Assistant Professor
+
+    Research Interests: Computational Social Science and Natural Language Processing
+    (NLP)'
   email: shadi.rezapour@drexel.edu
   googlescholar: b6UNLaAAAAAJ
   image: assets/theme/images/shadi.jpg
@@ -20,10 +19,9 @@
   name: Dr. Shadi Rezapour
   twitter: shadi_rezapour
   website: https://www.shadirezapour.com/
-- description: >
-    Assistant Professor<br>
-    Research Interests: HCI, Informatics,\
-    \ Privacy<br>
+- description: 'Assistant Professor
+
+    Research Interests: HCI, Informatics, Privacy'
   email: john.s.seberger@drexel.edu
   googlescholar: 6AkP0EcAAAAJ
   image: assets/theme/images/john.jpg
