--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,9 +1,9 @@
 - date: 01/11/2024
-  link: www.google.com
-  title: Our paper is published !
+  url: www.google.com
+  description: Our paper is published !
 - date: 02/11/2024
-  link: www.google.com
-  title: Pioneering Study!
+  url: www.google.com
+  description: Pioneering Study!
 - date: 03/11/2024
-  link: www.google.com
-  title: Leading Edge Technology!
+  url: www.google.com
+  description: Leading Edge Technology!
