--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,3 +2,5 @@
   title: "Teens on social media need both protection and privacy \u2013 AI could help\
     \ get the balance right"
   url: https://theconversation.com/teens-on-social-media-need-both-protection-and-privacy-ai-could-help-get-the-balance-right-222052
+  background:
+    img: assets/theme/images/news1.PNG
