--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,4 +3,4 @@
     \ get the balance right"
   url: https://theconversation.com/teens-on-social-media-need-both-protection-and-privacy-ai-could-help-get-the-balance-right-222052
   background:
-    img: https://images.unsplash.com/photo-1488509082528-cefbba5ad692?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+    img: https://images.theconversation.com/files/572027/original/file-20240129-15-6x4k1s.jpg
