--- a/_data/directors.yml
+++ b/_data/directors.yml
@@ -1,7 +1,7 @@
 - description: 'Assistant Professor
 
 
-    Research Interests: HCI, Social Computing, AI/ML, Privacy, and Online Safety'
+    HCI, Social Computing, AI/ML, Privacy, and Online Safety'
   email: afsaneh.razi@drexel.edu
   googlescholar: sV43f5AAAAAJ
   image: assets/theme/images/afsaneh.jpg
@@ -12,8 +12,7 @@
 - description: 'Assistant Professor
 
 
-    Research Interests: Computational Social Science and Natural Language Processing
-    (NLP)'
+    Computational Social Science and Natural Language Processing (NLP)'
   email: shadi.rezapour@drexel.edu
   googlescholar: b6UNLaAAAAAJ
   image: assets/theme/images/shadi.jpg
@@ -24,7 +23,7 @@
 - description: 'Assistant Professor
 
 
-    Research Interests: HCI, Informatics, Privacy'
+    HCI, Informatics, Privacy'
   email: john.s.seberger@drexel.edu
   googlescholar: 6AkP0EcAAAAJ
   image: assets/theme/images/john.jpg
